# badprog-electronics-freertos-timer-task-notification-and-event-group-on-stm32f3discovery-with-i2c

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
firmware/stm32f3discovery/: CMakeLists.txt
firmware/stm32f3discovery/inc/: FreeRTOSConfig.h  stm32f303xc.h
firmware/stm32f3discovery/src/: FreeRTOS_hooks.c  main.c
